--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,32 +26,16 @@
             <Button
                 android:id="@+id/random_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="204dp"
+                android:layout_height="match_parent"
                 android:text="隨機"
-                android:textColor="@android:color/white" />
-
-            <Button
-                android:id="@+id/favorite_btn"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="106dp"
-                android:layout_height="wrap_content"
-                android:text="收藏"
-                android:textColor="@android:color/white" />
-
-            <Button
-                android:id="@+id/history_btn"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="歷史紀錄"
                 android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/login_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="202dp"
+                android:layout_height="match_parent"
                 android:text="登入"
                 android:textColor="@android:color/white" />
         </LinearLayout>
